style.scss
/* ... */
.goldpill {
  background-color: #ffd700;
  color: black;
}

.entry-publication,.entry-report,.entry-bookreview,.entry-bookchapter {
  font: 16px "Inter", sans-serif;
  border-left: solid thick navy;
  padding-left: 10px;
  margin: 10px auto;
  line-height: 100%;
}

.what {
  font-weight: 500;
}

.who {
  font-weight: 200;
}

.where {
  font-weight: 300;
}

.lookatme {
  font-weight: 300;
}

.preprint {
  font: 8px "Inter", sans-serif;
  font-weight: 500;
  border: solid thin #000;
  padding: 5px auto;
}

/**************************************
    $DEFAULT ELEMENTS
/**************************************/
table {
    border-collapse: separate;
    border-spacing: 1.5rem .5rem;
    margin: 0 6rem 0 -1.5rem;
    text-align: left;
    width: 100%;

    th, td {
        font-weight: bold;
        padding: 0;

        &:not(:first-child) {
            text-align: right;
        }
    }

    thead th {
        border-bottom: 1px solid #111;
    }
}

/**************************************
    $DEFAULT CLASSES
/**************************************/
/*p*/.subtitle {
    font-size: 1.8rem;
    font-style: italic;
}

/*p*/.sans {
    font-family: "Gill Sans", "Gill Sans MT", Calibri, sans-serif;
    letter-spacing: .03em;
}

/*span*/.caps {
    font-variant: small-caps;
}

/*span*/.italics {
    font-style: italic;
}

/*span*/.marginnote,
/*span*/.sidenote,
figcaption {
    font-size: 80%;
    left: calc(100% + 4rem);
    line-height: 1.3rem;
    max-width: 400px;
    padding-top: 1rem;
    position: absolute;
    top: 0;
    width: 50%;
}

/*span*/.sidenote {
    &:before {
        content: counter(sidenote-counter) " ";
        font-family: et-book-roman-old-style;
        position: relative;
        top: -0.5rem;
        vertical-align: baseline;
    }
}

/*span*/.sidenote-number {
    counter-increment: sidenote-counter;

    &:after {
        content: counter(sidenote-counter);
        font-family: et-book-roman-old-style;
        font-size: 80%;
        left: 0.1rem;
        position: relative;
        top: -0.5rem;
        vertical-align: baseline;
    }
}

figure {
    /*span*/.marginnote,
    /*span*/.sidenote,
    figcaption {
        left: auto;
        position: relative;
    }
}

/*span*/.mini-note {
    display: block;
    font-size: 80%;
    font-style: italic;
}

/*div*/.epigraph {
    margin: 4rem 0;

    blockquote {
        font-style: italic;
        margin: 2rem 0;

        footer {
            font-style: normal;
        }
    }
}

/**************************************
    $CONTAINERS
/**************************************/
.bottom-footer {
    margin: 6rem 0;
}

/**************************************
    $NAVIGATION
/**************************************/
nav {
    margin-bottom: 6rem;
    margin-top: 1rem;

    .menu-icon {
        cursor: pointer;
        display: none;
        text-decoration: underline;
    }

    .menu-btn {
        display: none;
    }

    .menu-btn:checked ~ .site-nav {
        display: block;
    }

    ul.site-nav {
        list-style: none;
        margin: 0;
        padding: 0;

        li {
            display: inline-block;
            margin: 0 1.5rem 0 0;
        }

        a,a:visited {
            text-decoration: none;
        }
    }
}

/**************************************
    $MEDIA QUERIES - TABLET
/**************************************/
@media(max-width: 850px) {

    body {
        padding: 10px;
        width: calc(100% - 20px);
    }

    h2.title { margin-top: 2rem; }

    p,table,blockquote,pre,img,hr,.mini-note,ul li,ol li {
        max-width: 100%;
    }

    .MathJax_SVG_Display {
        max-width: 100% !important;
    }

    nav {

        .menu-icon {
            display: inline-block;
        }

        ul.site-nav {
            display: none;

            li {
                display: block;
                margin: 1rem 0;
                width: 100%;

                a,a:visited {
                    display: block;
                    width: 100%;
                }
            }
        }
    }

    figure {
        flex-direction: column;
    }

    /*span*/.marginnote,
    /*span*/.sidenote,
    figcaption {
        display: block;
        left: auto;
        margin-top: 1rem;
        position: relative;
        top: auto;
        width: 100%;
    }

}

/* Dark Mode */
@media (prefers-color-scheme: dark) {
    body{background:#191919;filter:invert(1);}
    .highlight{border-color: grey !important;}
    img,iframe,.highlight,a:hover,a:focus{filter:invert(1);}
}

